--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "node-Js-Blog is a blog builded using NodeJs , Express.js , mongoDb , Bootstrap",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/aymenzitouni19/Node-Js-Blog/issues"
   },
-  "homepage": "https://github.com/aymenzitouni19/Node-Js-Blog#readme"
+  "homepage": "https://github.com/aymenzitouni19/Node-Js-Blog#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
