templating enging init

--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "node-Js-Blog is a blog builded using NodeJs , Express.js , mongoDb , Bootstrap",
   "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/aymenzitouni19/Node-Js-Blog.git"
@@ -18,6 +16,10 @@
   },
   "homepage": "https://github.com/aymenzitouni19/Node-Js-Blog#readme",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-edge": "^2.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
