--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "homepage": "https://github.com/aymenzitouni19/Node-Js-Blog#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "express-edge": "^2.0.1"
+    "express-edge": "^2.0.1",
+    "mongoose": "^5.9.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
