--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-edge": "^2.0.1",
-    "mongoose": "^5.0.1"
+    "express-fileupload": "^1.1.6",
+    "mongoose": "^5.0.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
