--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "bootstrap": "^4.4.1",
+    "connect-flash": "^0.1.1",
+    "edge.js": "^1.1.4",
     "express": "^4.17.1",
     "express-edge": "^2.0.1",
     "express-fileupload": "^1.1.6",
